# MonoLLM

./: .env.exmaple  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup_github_pages.md
.cursor/rules/: available-models.mdc  unifid-llm-project-guide.mdc
.github/workflows/: docs.yml
config/: models.json
docs/: README.md  cli.rst  conf.py  configuration.rst  examples.rst  index.rst  installation.rst  quickstart.rst
docs/_static/: custom.css
docs/api/: client.rst
examples/: basic_usage.py  thinking_mode_demo.py
src/monollm/: __init__.py  cli.py
src/monollm/core/: client.py  models.py
src/unified_llm/: __init__.py  cli.py
src/unified_llm/config/: loader.py  manager.py
src/unified_llm/core/: client.py  exceptions.py  models.py
src/unified_llm/providers/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  google_provider.py  openai_provider.py  qwen_provider.py  volcengine_provider.py
test/: README.md  __init__.py  run_tests.py
