[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unified-llm"
version = "0.1.0"
description = "A framework that handles different LLM providers with a simplified interface"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [
    { name = "UnifiedLLM Contributors" },
]
keywords = ["llm", "ai", "framework", "unified", "providers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "structlog>=23.0.0",
    "google-generativeai>=0.3.0",
    "dashscope>=1.17.0",
    "pysocks>=1.7.1",
    "asyncio>=3.4.3",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
unified-llm = "unified_llm.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/unified-llm"
Repository = "https://github.com/yourusername/unified-llm"
Issues = "https://github.com/yourusername/unified-llm/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/unified_llm"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C", "I", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 